@@ -22,179 +22,185 @@ import org.workcraft.utils.PackageUtils;
 import org.workcraft.utils.WorkspaceUtils;
 import org.workcraft.workspace.WorkspaceEntry;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.HashSet;
 import java.util.Set;
 
-public class SynthesisCommandsTests {
+class SynthesisCommandsTests {
 
     @BeforeAll
-    public static void init() {
+    static void init() {
         final Framework framework = Framework.getInstance();
         framework.init();
         AtacsSettings.setCommand(BackendUtils.getTemplateToolPath("ATACS", "atacs"));
     }
 
     @Test
-    public void bufferComplexGateSynthesis() {
+    void irreducibleConflictComplexGateSynthesis() {
+        String workName = PackageUtils.getPackagePath(getClass(), "irreducible_conflict.stg.work");
+        testComplexGateSynthesisCommand(workName, null);
+    }
+
+    @Test
+    void bufferComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "buffer.stg.work");
         testComplexGateSynthesisCommand(workName, 1);
     }
 
     @Test
-    public void celementComplexGateSynthesis() {
+    void celementComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "celement.stg.work");
         testComplexGateSynthesisCommand(workName, 1);
     }
 
     @Test
-    public void busCtrlComplexGateSynthesis() {
+    void busCtrlComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "bus_ctrl.stg.work");
         testComplexGateSynthesisCommand(workName, 2);
     }
 
     @Test
-    public void dlatchComplexGateSynthesis() {
+    void dlatchComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "dlatch.stg.work");
         testComplexGateSynthesisCommand(workName, 1);
     }
 
     @Test
-    public void edcCscComplexGateSynthesis() {
+    void edcCscComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "edc-csc.stg.work");
         testComplexGateSynthesisCommand(workName, 7);
     }
 
     @Test
-    public void arbitrationComplexGateSynthesis() {
+    void arbitrationComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "arbitration-3-hierarchy.stg.work");
         testComplexGateSynthesisCommand(workName, 6);
     }
 
     @Test
-    public void duplicatorCscHierComplexGateSynthesis() {
+    void duplicatorCscHierComplexGateSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "duplicator-hier-csc.stg.work");
         testComplexGateSynthesisCommand(workName, 4);
     }
 
-    private void testComplexGateSynthesisCommand(String workName, int expectedGateCount) {
+    private void testComplexGateSynthesisCommand(String workName, Integer expectedGateCount) {
         try {
             checkSynthesisCommand(ComplexGateSynthesisCommand.class, workName, expectedGateCount);
-        } catch (DeserialisationException | InstantiationException | IllegalAccessException e) {
+        } catch (DeserialisationException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
+
             e.printStackTrace();
         }
     }
 
     @Test
-    public void bufferGeneralisedCelementSynthesis() {
+    void bufferGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "buffer.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 1);
     }
 
     @Test
-    public void celementGeneralisedCelementSynthesis() {
+    void celementGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "celement.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 1);
     }
 
     @Test
-    public void busCtrlGeneralisedCelementSynthesis() {
+    void busCtrlGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "bus_ctrl.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 2);
     }
 
     @Test
-    public void dlatchGeneralisedCelementSynthesis() {
+    void dlatchGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "dlatch.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 1);
     }
 
     @Test
-    public void edcCscGeneralisedCelementSynthesis() {
+    void edcCscGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "edc-csc.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 7);
     }
 
     @Test
-    public void arbitrationGeneralisedCelementSynthesis() {
+    void arbitrationGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "arbitration-3-hierarchy.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 6);
     }
 
     @Test
-    public void duplicatorCscHierGeneralisedCelementSynthesis() {
+    void duplicatorCscHierGeneralisedCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "duplicator-hier-csc.stg.work");
         testGeneralisedCelementSynthesisCommand(workName, 4);
     }
 
-    private void testGeneralisedCelementSynthesisCommand(String workName, int expectedGateCount) {
+    private void testGeneralisedCelementSynthesisCommand(String workName, Integer expectedGateCount) {
         try {
             checkSynthesisCommand(GeneralisedCelementSynthesisCommand.class, workName, expectedGateCount);
-        } catch (DeserialisationException | InstantiationException | IllegalAccessException e) {
+        } catch (DeserialisationException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
+
             e.printStackTrace();
         }
     }
 
     @Test
-    public void bufferStandardCelementSynthesis() {
+    void bufferStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "buffer.stg.work");
         testStandardCelementSynthesisCommand(workName, 3);
     }
 
     @Test
-    public void celementStandardCelementSynthesis() {
+    void celementStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "celement.stg.work");
         testStandardCelementSynthesisCommand(workName, 3);
     }
 
     @Test
-    public void busCtrlStandardCelementSynthesis() {
+    void busCtrlStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "bus_ctrl.stg.work");
         testStandardCelementSynthesisCommand(workName, 8);
     }
 
     @Test
-    public void dlatchStandardCelementSynthesis() {
+    void dlatchStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "dlatch.stg.work");
         testStandardCelementSynthesisCommand(workName, 3);
     }
 
     @Test
-    public void edcCscStandardCelementSynthesis() {
+    void edcCscStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "edc-csc.stg.work");
         testStandardCelementSynthesisCommand(workName, 19);
     }
 
     @Test
-    public void arbitrationStandardCelementSynthesis() {
+    void arbitrationStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "arbitration-3-hierarchy.stg.work");
         testStandardCelementSynthesisCommand(workName, 12);
     }
 
     @Test
-    public void duplicatorCscHierStandardCelementSynthesis() {
+    void duplicatorCscHierStandardCelementSynthesis() {
         String workName = PackageUtils.getPackagePath(getClass(), "duplicator-hier-csc.stg.work");
         testStandardCelementSynthesisCommand(workName, 18);
     }
 
-    private void testStandardCelementSynthesisCommand(String workName, int expectedGateCount) {
+    private void testStandardCelementSynthesisCommand(String workName, Integer expectedGateCount) {
         try {
             checkSynthesisCommand(StandardCelementSynthesisCommand.class, workName, expectedGateCount);
-        } catch (DeserialisationException | InstantiationException | IllegalAccessException e) {
+        } catch (DeserialisationException | InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
+
             e.printStackTrace();
         }
     }
 
     private <C extends AbstractSynthesisCommand> void checkSynthesisCommand(Class<C> cls, String workName,
-            int expectedComponentCount)
-            throws DeserialisationException, InstantiationException, IllegalAccessException {
-
-        checkSynthesisCommand(cls, workName, expectedComponentCount, expectedComponentCount);
-    }
-
-    private <C extends AbstractSynthesisCommand> void checkSynthesisCommand(Class<C> cls, String workName,
-            int minComponentCount, int maxComponentCount)
-            throws DeserialisationException, InstantiationException, IllegalAccessException {
+            Integer expectedComponentCount) throws DeserialisationException, InstantiationException,
+            IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 
         final Framework framework = Framework.getInstance();
         final ClassLoader classLoader = ClassLoader.getSystemClassLoader();
@@ -215,40 +221,43 @@ public class SynthesisCommandsTests {
             }
         }
 
-        C command = cls.newInstance();
+        C command = cls.getDeclaredConstructor().newInstance();
         WorkspaceEntry dstWe = command.execute(srcWe);
-        Circuit dstCircuit = WorkspaceUtils.getAs(dstWe, Circuit.class);
-        Set<String> dstInputs = new HashSet<>();
-        Set<String> dstOutputs = new HashSet<>();
-        // Process primary ports
-        for (Contact port: dstCircuit.getPorts()) {
-            String dstSignal = dstCircuit.getNodeReference(port);
-            if (port.isInput()) {
-                dstInputs.add(dstSignal);
-            }
-            if (port.isOutput()) {
-                dstOutputs.add(dstSignal);
-            }
-        }
-        // Process environment pins
-        Set<String> dstPageRefs = new HashSet<>();
-        for (PageNode page: Hierarchy.getChildrenOfType(dstCircuit.getRoot(), PageNode.class)) {
-            for (Contact port: dstCircuit.getPorts()) {
-                if (port.getParent() == page) {
-                    dstPageRefs.add(dstCircuit.getNodeReference(page));
-                    break;
+        if (expectedComponentCount == null) {
+            Assertions.assertNull(dstWe);
+        } else {
+            Circuit dstCircuit = WorkspaceUtils.getAs(dstWe, Circuit.class);
+            Set<String> dstInputs = new HashSet<>();
+            Set<String> dstOutputs = new HashSet<>();
+            // Process primary ports
+            for (Contact port : dstCircuit.getPorts()) {
+                String dstSignal = dstCircuit.getNodeReference(port);
+                if (port.isInput()) {
+                    dstInputs.add(dstSignal);
+                }
+                if (port.isOutput()) {
+                    dstOutputs.add(dstSignal);
                 }
             }
-        }
-        Set<String> dstMutexes = getMutexComponentReferences(dstCircuit);
-        int dstComponentCount = dstCircuit.getFunctionComponents().size();
+            // Process environment pins
+            Set<String> dstPageRefs = new HashSet<>();
+            for (PageNode page : Hierarchy.getChildrenOfType(dstCircuit.getRoot(), PageNode.class)) {
+                for (Contact port : dstCircuit.getPorts()) {
+                    if (port.getParent() == page) {
+                        dstPageRefs.add(dstCircuit.getNodeReference(page));
+                        break;
+                    }
+                }
+            }
+            Set<String> dstMutexes = getMutexComponentReferences(dstCircuit);
+            int dstComponentCount = dstCircuit.getFunctionComponents().size();
 
-        Assertions.assertEquals(srcInputs, dstInputs);
-        Assertions.assertEquals(srcOutputs, dstOutputs);
-        Assertions.assertEquals(srcMutexes, dstMutexes);
-        Assertions.assertTrue(minComponentCount <= dstComponentCount);
-        Assertions.assertTrue(maxComponentCount >= dstComponentCount);
-        Assertions.assertEquals(srcPageRefs, dstPageRefs);
+            Assertions.assertEquals(srcInputs, dstInputs);
+            Assertions.assertEquals(srcOutputs, dstOutputs);
+            Assertions.assertEquals(srcMutexes, dstMutexes);
+            Assertions.assertEquals(expectedComponentCount, dstComponentCount);
+            Assertions.assertEquals(srcPageRefs, dstPageRefs);
+        }
     }
 
     private static Set<String> getMutexComponentReferences(Circuit circuit) {
